src/test/deca/context/invalid/sansObj/et-binaire-float.deca
// Description:
//          Utilisation de l'opérateur && avec un float et un bool
//
// Résultat:
//Le terme de droite n'est pas un booléen
//
{
    boolean a = true;
    float b = 10.2;
    boolean c = (a && b);
}